<resources>
    <string name="app_name">Reportr</string>

    <!-- News Catergories items Titles -->
    <string name="categories">Categories:</string>
    <string name="entertainment">Entertainment</string>
    <string name="science">Science</string>
    <string name="technology">Technology</string>
    <string name="global">Global</string>
    <string name="business">Business</string>
    <string name="health">Health</string>
    <string name="sports">Sports</string>
    <string name="top_indian_news">Top Indian News</string>
    <string name="popular_news_sources">Popular News Sources:</string>
    <string name="bbc_news">BBC News</string>
    <string name="google_news">Google News</string>
    <string name="national_geographic">National Geographic</string>
    <string name="the_hindu">The Hindu</string>
    <string name="usa_today">USA Today</string>
    <string name="news24">News24</string>

    <!-- BottmNavigationBar items Titles -->
    <string name="headlines">Headlines</string>
    <string name="newspapers">Newspapers</string>
    <string name="news_live">Live News</string>
    <string name="options">Options</string>

    <!-- NewsPaper language categories texts-->
    <string name="english">English:</string>
    <string name="hindi">Hindi:</string>
    <string name="bengali">Bengali:</string>

    <!-- Others-->
    <string name="live_toolbar_title">LiveTV News</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_this_app">About</string>
    <string name="app_version">App version 1.0</string>

    <!-- About page text-->
    <string name="about_text">*ABOUT APP:\n\n\"Reportr\" is a simple news reading application with some basic but beautiful
minimalistic features.\nIt has access to some very popular news sources such
as BBC News, The Telegraph etc from which it directly delivers the latest
headlines. \nThis app also has Newspapers support and Live TV news.
        \n\n*SELF DECLARATION:\n\nThis App is developed by me, Subhajit Kar individually and somewhere I
took the help of some open source GITHUB libraries to make this project.
\nThis project is made in personal level, so it\'s free but it may contains
ads.
    </string>

    <!-- Temporary text-->
    <string name="temp_text_2">This is news title of the news itself which is one of the main fea</string>
    <string name="coming_soon">Live Tv News \n   Coming Soon..</string>
    <string name="temp_text">Developer-\nsubhajit Kar \nEmail-\ndevelopersubha123@gmail.com \n [Any suggestions are welcome]</string>
    <string name="the_telegraph">The Telegraph</string>


</resources>
