<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fade_grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/toolbar_layout">

        <include layout="@layout/snippet_details_toolbar" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="384dp"
        android:layout_margin="5dp"
        android:scrollbars="none"
        android:layout_below="@id/toolbar_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:text="@string/about_text" />
            <TextView
                android:id="@+id/tv_tAndC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/sky_blue"
                android:padding="7dp"
                android:background="@drawable/button_background_border"
                android:text="@string/terms_and_conditions" />
            <TextView
                android:id="@+id/tv_privacyP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="3dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/sky_blue"
                android:padding="10dp"
                android:background="@drawable/button_background_border"
                android:text="@string/privacy_policy" />
            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/orange"
                android:text="@string/app_version" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>