<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/lin_layout_1">

        <include layout="@layout/snippet_details_toolbar" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scroll_view"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_english"
                android:text="@string/english"
                android:textSize="17sp"
                android:textColor="@color/dark_orange"
                android:textStyle="bold|italic"
                android:layout_marginBottom="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:id="@+id/iv_toi"
                    android:src="@drawable/toi"
                    android:padding="3dp"
                    android:background="@drawable/white_background_bordered"
                    android:layout_weight="1"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:id="@+id/iv_telegraph"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/telegraph"
                    android:layout_marginStart="5dp"
                    android:padding="3dp"

                    android:background="@drawable/white_background_bordered"
                    android:layout_weight="1"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:id="@+id/iv_statesman"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/statesman"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/white_background_bordered"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:weightSum="3">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:id="@+id/iv_guardian"
                    android:src="@drawable/guardian"
                    android:padding="3dp"

                    android:background="@drawable/white_background_bordered"
                    android:layout_weight="1"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:id="@+id/iv_tnyt"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/tnyt"
                    android:layout_marginStart="5dp"
                    android:padding="3dp"

                    android:background="@drawable/white_background_bordered"
                    android:layout_weight="1"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:id="@+id/iv_china"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/china_daily"
                    android:layout_marginStart="5dp"
                    android:padding="3dp"

                    android:background="@drawable/white_background_bordered"
                    android:layout_weight="1"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_hindi"
                android:text="@string/hindi"
                android:textSize="17sp"
                android:textColor="@color/dark_orange"
                android:textStyle="bold|italic"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">
            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:id="@+id/iv_bhaskar"
                    android:src="@drawable/dainik_bhaskar"
                android:padding="3dp"

                android:background="@drawable/white_background_bordered"
                android:layout_weight="1"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:id="@+id/iv_jagran"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/dainik_jagran"
                    android:layout_marginStart="5dp"
                    android:padding="3dp"

                    android:background="@drawable/white_background_bordered"
                    android:layout_weight="1"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:id="@+id/iv_hindustan"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/hindustan"
                    android:layout_marginStart="5dp"
                    android:padding="3dp"

                    android:background="@drawable/white_background_bordered"
                    android:layout_weight="1"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_bengali"
                android:text="@string/bengali"
                android:textSize="17sp"
                android:textColor="@color/dark_orange"
                android:textStyle="bold|italic"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                android:weightSum="3">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:id="@+id/iv_abp"
                    android:src="@drawable/ananda_bazar_patrika"
                    android:padding="3dp"

                    android:background="@drawable/white_background_bordered"
                    android:layout_weight="1"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:id="@+id/iv_bartaman"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/dailybartoman"
                    android:layout_marginStart="5dp"
                    android:padding="3dp"
                    android:background="@drawable/white_background_bordered"
                    android:layout_weight="1"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:id="@+id/iv_pratidin"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/pratidin"
                    android:layout_marginStart="5dp"
                    android:padding="3dp"
                    android:background="@drawable/white_background_bordered"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>